<resources>
    <string name="app_name">LinguSign</string>
    <string name="update_app">Update application</string>
    <string name="updating">Updating…</string>
    <string name="update_finished">Update finished!</string>
    <string name="select_interpreter">Select interpreter</string>
    <string name="cancel">Cancel</string>
    <string name="smoothness">Animation smoothness</string>
    <string name="interpreter">Interpreter</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Don\'t have an account? Register here</string>
    <string name="wrong_credentials">Wrong username or password</string>
    <string name="unknown_error">Network error</string>
    <string name="user_exists">There is already a user with that name</string>
    <string name="invalid_user_name">Username can have only alphanumerical characters and the following symbols: "-._@+", and must be between 2 and 50 characters long</string>
    <string name="invalid_password">Password must be at least 6 characters long, and have at least one digit, one symbol, and one lowercase character</string>
    <string name="passwords_no_match">Passwords don\'t match</string>
    <string name="register">Register</string>
    <string name="goto_login">Go to login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_internet_dialog_text">It is likely that the request failed due to poor or no internet. The application needs internet to function. Ensure internet connection to keep using it</string>
    <string name="request_failed">Request failed</string>
    <string name="greeting">Welcome!</string>
    <string name="ro_to_sl_title">Listen</string>
    <string name="ro_to_sl_body">Translate from spoken romanian to sign language</string>
    <string name="sl_to_ro_title">Record</string>
    <string name="sl_to_ro_body">Translate from sign language to spoken romanian</string>
    <string name="update_title">Update</string>
    <string name="update_body">Ensure you have the latest updates available</string>
    <string name="update_needed">Update needed</string>
    <string name="update_needed_text">The application needs to download some files to function. Depending on your internet speed, it might take up to half an hour. Please press "OK" when you are ready</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="need_record_audio_permissions">To function, the application needs to record audio. Please press on "Permissions" -> "Microphone" and choose the first option</string>
    <string name="need_camera_permissions">To function, the application needs to record video. Please press on "Permissions" -> "Camera" and choose the first option</string>
    <string name="need_permissions">Permissions required</string>
    <string name="speed">Animation speed</string>
    <string name="hw_acc">Use hardware acceleration</string>
    <string name="build_sentence_end">Build sentence at the end</string>
    <string name="skel_overlay">Draw skeleton overlay</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
</resources>