<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_settings_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="?android:attr/colorBackground"
    android:elevation="6dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/bottom_settings_padding"
    app:behavior_hideable="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/bottom_settings_inner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_chevron_up" />

        <TextView
            android:id="@+id/textView_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/speed"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/seekBar_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="15"
            android:min="5" />

        <TextView
            android:id="@+id/textView_smoothness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/smoothness"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/seekBar_smoothness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:min="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/interpreter"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_interpreter"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_interpreter">

            <AutoCompleteTextView
                android:id="@+id/actv_interpreter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="18sp"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
